--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -9,7 +9,7 @@ To ensure that multipathing is configured correctly for your host, verify that t
 touch /etc/multipath.conf
 ----
 
-. The first time the `multipath.conf` file is created, you might need to enable and start the multipath services: 
+. The first time the `multipath.conf` file is created, you might need to enable and start the multipath services to load the recommended settings: 
 +
 [source,cli]
 ----
@@ -21,7 +21,7 @@ systemctl enable multipathd
 systemctl start multipathd
 ----
 
-. When you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
+. Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
 +
 The following table shows the Linux OS native compiled multipath parameter settings for ONTAP LUNs.
 +
