--- a/hu-solaris-114.adoc
+++ b/hu-solaris-114.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_solaris_114.html
+permalink: hu-solaris-114.html
 keywords: host utilities, solaris, 114, netapp, ontap
 summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTAP
 ---
@@ -20,38 +20,22 @@ include::_include/hu/enable-san-boot-solaris.adoc[]
 include::_include/hu/install-solaris-host-utilities-80.adoc[]
 
 
-== Multipathing
+== Step 3: Confirm the multipath configuration for your host
+You can use multipathing with Solaris 11.4 to manage ONTAP LUNs.
 
-Multipathing enables you to configure multiple network paths between the host and storage systems. If one path fails, traffic continues on the remaining paths. Oracle Solaris I/O Multipathing or MPxIO is enabled by default for Solaris 11.4. The default setting in `/kernel/drv/fp.conf` changes to mpxio-disable="no".
+Multipathing enables you to configure multiple network paths between the host and storage systems. If one path fails, traffic continues on the remaining paths. Oracle Solaris I/O Multipathing (MPxIO) is enabled by default for Solaris 11.4.
 
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
+To ensure that multipathing is configured correctly for your host, verify that you have the NetApp recommended settings configured for your ONTAP LUNs.
 
-The path priorities are displayed against the *Access State* section for each LUN in the OS native `mpathadm show lu <LUN>` command.
+.Steps
 
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
+. Verify that the default setting in `/kernel/drv/fp.conf` is set to `mpxio-disable="no"`.
 
-The output for the `sanlun` command is the same for ASA and non-ASA configurations.
-
-The path priorities are displayed against the *Access State* section for each LUN in the OS native `mpathadm show lu <LUN>` command.
-
-----
-#sanlun lun show -pv sparc-s7-16-49:/vol/solaris_vol_1_0/solaris_lun
-
-                    ONTAP Path: sparc-s7-16-49:/vol/solaris_vol_1_0/solaris_lun
-                           LUN: 0
-                      LUN Size: 30g
-                   Host Device: /dev/rdsk/c0t600A098038314362692451465A2F4F39d0s2
-                          Mode: C
-            Multipath Provider: Sun Microsystems
-              Multipath Policy: Native
-----
-
-NOTE: All SAN Arrays (ASA) configurations are supported beginning ONTAP 9.8 for Solaris hosts.
-
-== Recommended settings
-
-NetApp recommends using the following parameter settings for Solaris 11.4 SPARC and x86_64 with ONTAP LUNs. These parameter values are set by Host Utilities. For additional Solaris 11.4 system settings, see Oracle DOC ID: 2595926.1.
-
+. The Solaris 11.4 Host Utilities load the NetApp recommended parameter settings for SPARC and x86_64 processors. For additional Solaris 11.4 system settings, see Oracle DOC ID: 2595926.1.
++
+.Show parameter settings
+[%collapsible]
+====
 [cols=2*, options="header"]
 |===
 | Parameter
@@ -63,54 +47,35 @@ NetApp recommends using the following parameter settings for Solaris 11.4 SPARC 
 | throttle_min  | 2
 | timeout_retries   | 10
 | physical_block_size  | 4096
+| disksort | false
+| cache-nonvolatile | true
 |===
+====
++
+You should use load the following recommended settings if they apply to your storage configuration.
++
+[role="tabbed-block"]
+====
+.MetroCluster
+--
+By default, the Solaris OS fails to execute the I/O operations after *20s* if all paths to a LUN are lost. This is controlled by the `fcp_offline_delay` parameter. The default value for `fcp_offline_delay` is appropriate for standard ONTAP clusters. However, in MetroCluster configurations, you must increase the value of `fcp_offline_delay` to *120s* to ensure that I/O doesn't prematurely time out during operations, including unplanned failovers. 
 
-All Solaris OS versions (including Solaris 10.x and Solaris 11.x) support Solaris HUK 6.2. 
+For additional information and recommended changes to default settings for MetroCLuster, see the Knowledge Base article https://kb.netapp.com/onprem/ontap/metrocluster/Solaris_host_support_considerations_in_a_MetroCluster_configuration[Solaris host support considerations in a MetroCluster configuration^].
+--
 
-* For Solaris 11.4, the FC driver binding is changed from `ssd` to `sd`. The following configuration files get partially updated during the HUK 6.2 installation process:
+.Oracle Solaris virtualization
+--
+Solaris virtualization options include Solaris Logical Domains (also called LDOMs or Oracle VM Server for SPARC), Solaris Dynamic Domains, Solaris Zones, and Solaris Containers. These technologies are also referred to as "Oracle Virtual Machines".
 
-** `/kernel/drv/sd.conf`
-** `/etc/driver/drv/scsi_vhci.conf`
+You can use multiple options together, such as a Solaris Container within a particular Solaris Logical Domain.
 
-* For Solaris 11.3, the FC driver binding uses `ssd`. The following configuration files get partially updated during the HUK 6.2 installation process:
+NetApp supports the use of Solaris virtualization technologies where the overall configuration is supported by Oracle and any partition with direct access to LUNs is listed on the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] in a supported configuration. This includes root containers, LDOM I/O domains, and LDOM using NPIV to access LUNs.
 
-** `/kernel/drv/ssd.conf`
-** `/etc/driver/drv/scsi_vhci.conf`
+Partitions or virtual machines that use only virtualized storage resources, such as a `vdsk`, don't need specific qualifications because they don't have direct access to ONTAP LUNs. Only the partition or virtual machine that has direct access to the underlying LUN, such as an LDOM I/O domain, must be found in the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^].
 
-* For Solaris 10.x, the following configuration files get fully updated during the HUK 6.2 installation process:
+.Recommended settings for virtualization
 
-** `/kernel/drv/sd.conf`
-** `/kernel/drv/ssd.conf`
-** `/kernel/drv/scsi_vhci.conf`
-
-To resolve any configuration issues, see the Knowledge Base article link:https://kb.netapp.com/onprem/ontap/da/SAN/What_are_the_Solaris_Host_recommendations_for_Supporting_HUK_6.2[What are the Solaris host recommendations for supporting HUK 6.2^]. 
-
-NetApp recommends the following for a successful 4KB aligned I/O with zpools using NetApp LUNs:
-
-* Verify that you are running a recent enough Solaris OS to ensure that all Solaris features supporting 4KB I/O size alignment are available. 
-
-* Verify that the Solaris 10 update 11 is installed with latest kernel patches and Solaris 11.4 with the latest Support Repository Update (SRU).
-
-* The NetApp logical unit must have `lun/host-type` as `Solaris` regardless of the LUN size. 
-
-
-=== Recommended settings for MetroCluster
-
-By default, the Solaris OS will fail to execute the I/O operations after *20s* if all paths to a LUN are lost. This is controlled by the `fcp_offline_delay` parameter. The default value for `fcp_offline_delay` is appropriate for standard ONTAP clusters. However, in MetroCluster configurations the value of `fcp_offline_delay` must be increased to *120s* to ensure that I/O does not prematurely time out during operations including unplanned fail overs. For additional information and recommended changes to default settings, see the Knowledge Base article https://kb.netapp.com/onprem/ontap/metrocluster/Solaris_host_support_considerations_in_a_MetroCluster_configuration[Solaris host support considerations in a MetroCluster configuration^].
-
-== Oracle Solaris virtualization
-
-* Solaris virtualization options include Solaris Logical Domains (also called LDOMs or Oracle VM Server for SPARC), Solaris Dynamic Domains, Solaris Zones, and Solaris Containers. These technologies have been re-branded generally as "Oracle Virtual Machines" despite the fact that they are based on different architectures.
-
-* In some cases, multiple options can be used together such as a Solaris Container within a particular Solaris Logical Domain.
-
-* NetApp generally supports the use of these virtualization technologies where the overall configuration is supported by Oracle and any partition with direct access to LUNs is listed on the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] in a supported configuration. This includes root containers, LDOM I/O domains, and LDOM using NPIV to access LUNs.
-
-* Partitions or virtual machines that use only virtualized storage resources, such as a `vdsk`, do not need specific qualifications as they do not have direct access to NetApp LUNs. Only the partition or virtual machine that has direct access to the underlying LUN, such as an LDOM I/O domain, must be found in the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^].
-
-=== Recommended settings for virtualization
-
-When LUNs are used as virtual disk devices within an LDOM, the source of the LUN is masked by virtualization and the LDOM will not properly detect the block sizes. To prevent this issue, the LDOM OS must be patched for _Oracle Bug 15824910_ and a `vdc.conf` file must be created that sets the block size of the virtual disk to `4096`. See Oracle DOC: 2157669.1 for more information.
+When LUNs are used as virtual disk devices within an LDOM, the source of the LUN is masked by virtualization and the LDOM doesn't correctly detect the block sizes. To prevent this issue, you must patch the LDOM OS for _Oracle Bug 15824910_ and create a `vdc.conf` file that sets the block size of the virtual disk to `4096`. See Oracle DOC: 2157669.1 for more information.
 
 To verify the patch do the following:
 
@@ -119,25 +84,20 @@ To verify the patch do the following:
 . Create a zpool.
 . Run `zdb -C` against the zpool and verify that the value of *ashift* is `12`.
 +
-If the value of *ashift* is not `12`, verify that the correct patch was installed and recheck the contents of `vdc.conf`.
+If the value of *ashift* isn't `12`, re run `zdb -C11`, and verify that the correct patch was installed and recheck the contents of `vdc.conf`.
 +
-Do not proceed until *ashift* shows a value of `12`.
+Don't proceed until *ashift* shows a value of `12`.
 
-NOTE: Patches are available for Oracle bug 15824910 on various versions of Solaris. Contact Oracle if assistance is required in determining the best kernel patch.
+NOTE: Patches are available for Oracle bug 15824910 on several Solaris versions. Contact Oracle if you need assistance in determining the best kernel patch.
+--
 
-
-
-== Recommended settings for SnapMirror active sync
-
-In order to verify that the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in a SnapMirror active sync environment, you must configure the following setting on the Solaris 11.4 host. This setting overrides the failover module `f_tpgs` to prevent the execution of the code path that detects the contradiction.
-
-NOTE: Beginning with ONTAP 9.9.1, SnapMirror active sync setting configurations are supported in the Solaris 11.4 host.
-
-Follow the instructions to configure the override parameter:
+.SnapMirror active sync
+--
+Beginning with ONTAP 9.9.1, SnapMirror active sync setting configurations are supported in the Solaris 11.4 host. In order to verify that the Solaris client applications are non-disruptive when an unplanned site failover switchover occurs in a SnapMirror active sync environment, you must configure the following setting on the Solaris 11.4 host. This setting overrides the failover module `f_tpgs` to prevent the execution of the code path that detects the contradiction.
 
 .Steps
 
-. Create the configuration file `/etc/driver/drv/scsi_vhci.conf` with an entry similar to the following for the NetApp storage type connected to the host:
+. Create the configuration file `/etc/driver/drv/scsi_vhci.conf` with an entry similar to the following example for the NetApp storage type connected to the host:
 +
 ----
 scsi-vhci-failover-override =
@@ -145,9 +105,10 @@ scsi-vhci-failover-override =
 ----
 . Use the `devprop` and `mdb` commands to verify that the override parameter has been successfully applied:
 +
+----
 `root@host-A:~# devprop -v -n /scsi_vhci scsi-vhci-failover-override      scsi-vhci-failover-override=NETAPP  LUN + f_tpgs
 root@host-A:~# echo "*scsi_vhci_dip::print -x struct dev_info devi_child | ::list struct dev_info devi_sibling| ::print struct dev_info devi_mdi_client| ::print mdi_client_t ct_vprivate| ::print struct scsi_vhci_lun svl_lun_wwn svl_fops_name"| mdb -k`
-
+----
 +
 ----
 svl_lun_wwn = 0xa002a1c8960 "600a098038313477543f524539787938"
@@ -155,10 +116,63 @@ svl_fops_name = 0xa00298d69e0 "conf f_tpgs"
 ----
 
 NOTE: After `scsi-vhci-failover-override` has been applied, `conf` is added to `svl_fops_name`. For additional information and recommended changes to default settings, refer to the NetApp Knowledge Base article https://kb.netapp.com/Advice_and_Troubleshooting/Data_Protection_and_Security/SnapMirror/Solaris_Host_support_recommended_settings_in_SnapMirror_Business_Continuity_(SM-BC)_configuration[Solaris Host support recommended settings in SnapMirror active sync configuration^].
+--
+====
 
-== Known issues
+. To support 4KB aligned I/O with zpools using ONTAP LUNs, verify hte following:
 
-The Solaris 11.4 with ONTAP release has the following known issues:
+.. Solaris 11.4 is installed with the latest Support Repository Update (SRU).
+
+.. The NetApp logical unit has `lun/host-type` as `Solaris`, independent of the LUN size. 
+
+. Verify the output for your ONTAP LUNs:
++
+`sanlun lun show`
++
+You should see an output similar to the following example for an ASA, AFF, or FAS configuration:
++
+----
+root@sparc-s7-55-148:~# sanlun lun show -pv
+ 
+                    ONTAP Path: Solaris_148_siteA:/vol/Triage/lun
+                           LUN: 0
+                      LUN Size: 20g
+                   Host Device: /dev/rdsk/c0t600A098038314B32685D573064776172d0s2
+                          Mode: C
+            Multipath Provider: Sun Microsystems
+              Multipath Policy: Native
+----
+
+. Verify the path status for your ONTAP LUNs:
++
+`mpathadm show lu <LUN>`
++
+The path priorities are displayed against the Access State section for each LUN in the output.
++
+The following example outputs show the correct path status for ONTAP LUNs in an ASA, AFF, or FAS configuration.
++
+[role="tabbed-block"]
+====
+.ASA configurations
+--
+An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time.
+
+<Dinil to provide example output>
+--
+
+.AFF or FAS configuration
+--
+An AFF or FAS configuration should have two groups of paths with higher and lower priorities. Higher priority Active/Optimized paths are served by the controller where the aggregate is located. Lower priority paths are active but non-optimized because they are served by a different controller. Non-optimized paths are only used when optimized paths aren’t available.
+
+The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
+
+<Dinil to provide example output>
+--
+====
+
+== Step 4: Review the known issues
+
+The Solaris 11.4 release for FCP and iSCSI with ONTAP storage has the following known issues:
 
 [cols=4*, options="header"]
 |===
@@ -172,3 +186,7 @@ The Solaris 11.4 with ONTAP release has the following known issues:
 | link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1368957[1368957^] | Solaris 11.x `cfgadm -c configure` resulting in I/O error with end-to-end Emulex configuration | Running `cfgadm -c configure` on Emulex end-to-end configuration results in an I/O error. This is fixed in ONTAP 9.5P17, 9.6P14 , 9.7P13, and 9.8P2 | Not Applicable
 | link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1345622[1345622^] | Abnormal path reporting on Solaris hosts with ASA/PPorts using OS native commands | Intermittent path reporting issues are noticed on Solaris 11.4 with All SAN Array (ASA). | Not Applicable
 |===
+
+== What's next?
+
+link:hu_solaris_80_cmd.html[Learn about using the Solaris Host Utilities tool].
